2019-06-09  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/ft{view,grid,string}.c (parse_cmdline): Generalize batch mode...
	(usage): ... and mention it.
	* src/ft{view,grid,string}.1: s/end/contain/.

2019-06-09  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* graph/batch/grbatch.c (gr_batch_surface_refresh_rect): Remove.

2019-06-09  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/ftcommon.[hc] (FTDemo_Display_Print): Use `const' qualifier. 
	* src/ftdump.c (Print_Bytecode): Ditto.
	* src/ftmulti.c (new_header): Ditto.
	* src/ftstring.c (header): Ditto.
	* src/ft{view,grid,string}.c (Process_Event): Updated.

2019-06-07  Werner Lemberg  <wl@gnu.org>

	Fix compilation warnings.

	Also do some minor formatting.

	* graph/batch/grbatch.c: Suppress warnings about unused variables.

	* src/*: Suppress warnings about dropping `const'.

2019-06-06  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftgrid,ftview,ftstring] Enable batch mode.

	* src/ftcommon.[hc] (FTDemo_Display_New): Pass `device' argument.
	* src/{ftview,ftstring,ftgrid}.c (status): New `device' field.
	(parse_cmdline): Enable batch mode if keys end with `q'.
	* src/{ftview,ftstring,ftgrid}.1: Document it.

2019-06-06  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[graph] New batch device.

	This driver maintains the image in memory without displaying it,
	useful for batch processing without GUI.

	* graph/batch/grbatch.[hc]: New implenetation files.
	* graph/batch/rules.mk: Makefile with unconditinal compilation.
	* graph/grinit.c (GR_INIT_DEVICE_CHAIN): Add the driver at the tail.

2019-06-05  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[graph] Stay true to linked lists.

	* graph/grinit.c (grInitDevices, grDoneDevices): Properly walk and
	delete entries from the linked list `gr_device_chain'.
	* graph/grdevice.c (find_device): Ditto.
	* graph/grdevice.h (gr_num_devices, gr_max_devices): Removed.
	* graph/grconfig.h (GR_MAX_DEVICES): Ditto.
